syntax = "proto3";

package users;

// User service for managing user data
service UserService {
  // Get a single user by ID
  rpc GetUser (GetUserRequest) returns (User);

  // List users with pagination (server streaming)
  rpc ListUsers (ListUsersRequest) returns (stream User);

  // Create a new user
  rpc CreateUser (CreateUserRequest) returns (User);

  // Update an existing user
  rpc UpdateUser (UpdateUserRequest) returns (User);

  // Delete a user
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);

  // Batch create users (client streaming)
  rpc BatchCreateUsers (stream CreateUserRequest) returns (BatchCreateResponse);

  // Real-time user updates (bidirectional streaming)
  rpc StreamUsers (stream UserStreamRequest) returns (stream User);
}

// User entity
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string role = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

// Request messages
message GetUserRequest {
  string id = 1;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
  string role_filter = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
  string role = 4;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string role = 5;
}

message DeleteUserRequest {
  string id = 1;
}

message UserStreamRequest {
  string event_type = 1;
  User user = 2;
}

// Response messages
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message BatchCreateResponse {
  int32 count = 1;
  repeated User users = 2;
}

